# deepctt

./: .gitignore  README.md  pyproject.toml
deepctt/: __init__.py  compress.py  ctt.py  kernels.py  utils.py
examples/higgs/: README.md  format_power.py  run_power.py  util_experiments.py  utils_HD.py  wb_block.py
examples/higgs/slurm/: power_n16384_mixture.sh  power_n4096.sh
