[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepctt"
description = ""
version = "0.0.0"
authors = [
    {name="Annabelle Michael Carrell", email="ac2411@cam.ac.uk"},
    {name="Albert Gong", email="agong@cs.cornell.edu"},
    {name="Abhishek Shetty", email="ashetty1995@gmail.com"},
    {name="Raaz Dwivedi", email="dwivedi@cornell.edu"},
    {name="Lester Mackey", email="lmackey@microsoft.com"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.4.0",
    "torchvision",
    "torchaudio",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/microsoft/deepctt"
Issues = "https://github.com/microsoft/deepctt/issues"
Repository = "https://github.com/microsoft/deepctt.git"

[tool.ruff]

exclude = [
    ".git",
    "__pycache__",
    "examples/higgs/utils_HD.py",
]

lint.ignore = [
    "ANN101",
    "ANN401",
    "N801",
    "E203",
    "E266",
    "E501",
    "E741",
    "N803",
    "N802",
    "N806",
    "D400",
    "D401",
    "D104", #temporary
    "D105",
    "D415",
    "D402",
    "D205",
    "D100",
    "D101",
    "D107",
    "D203",
    "D213",
    "ANN204",
    "ANN102",
]
lint.select = ["D", "E", "F", "N", "ANN"]
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.unfixable = []
